// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lifecycle rules stability a valid stability is provided - beta 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-snyk-api-stability": "beta",
      },
    },
    "condition": "be provided for every resource document",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#stability-levels",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-snyk-api-stability": "beta",
        },
        "before": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
    "condition": "not change unless it was wip",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#promoting-stability-of-a-resource-over-time",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability transitions",
    "passed": true,
    "received": undefined,
    "where": "changed specification",
  },
]
`;

exports[`lifecycle rules stability a valid stability is provided - experimental 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-snyk-api-stability": "experimental",
      },
    },
    "condition": "be provided for every resource document",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#stability-levels",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-snyk-api-stability": "experimental",
        },
        "before": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
    "condition": "not change unless it was wip",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#promoting-stability-of-a-resource-over-time",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability transitions",
    "passed": true,
    "received": undefined,
    "where": "changed specification",
  },
]
`;

exports[`lifecycle rules stability a valid stability is provided - ga 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-snyk-api-stability": "ga",
      },
    },
    "condition": "be provided for every resource document",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#stability-levels",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-snyk-api-stability": "ga",
        },
        "before": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
    "condition": "not change unless it was wip",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#promoting-stability-of-a-resource-over-time",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability transitions",
    "passed": true,
    "received": undefined,
    "where": "changed specification",
  },
]
`;

exports[`lifecycle rules stability a valid stability is provided - wip 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-snyk-api-stability": "wip",
      },
    },
    "condition": "be provided for every resource document",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#stability-levels",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-snyk-api-stability": "wip",
        },
        "before": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
    "condition": "not change unless it was wip",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#promoting-stability-of-a-resource-over-time",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability transitions",
    "passed": true,
    "received": undefined,
    "where": "changed specification",
  },
]
`;

exports[`lifecycle rules stability an invalid stability is provided 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-snyk-api-stability": "published",
      },
    },
    "condition": "be provided for every resource document",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#stability-levels",
    "error": "published must be one of allowed values wip, experimental, beta, ga",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability",
    "passed": false,
    "received": undefined,
    "where": "requirement for specification",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-snyk-api-stability": "published",
        },
        "before": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
    "condition": "not change unless it was wip",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#promoting-stability-of-a-resource-over-time",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability transitions",
    "passed": true,
    "received": undefined,
    "where": "changed specification",
  },
]
`;

exports[`lifecycle rules stability can not change from any stability but wip 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-snyk-api-stability": "beta",
      },
    },
    "condition": "be provided for every resource document",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#stability-levels",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-snyk-api-stability": "beta",
        },
        "before": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-snyk-api-stability": "ga",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
    "condition": "not change unless it was wip",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#promoting-stability-of-a-resource-over-time",
    "error": "stability transition from '[object Object]' to '[object Object]' not allowed",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability transitions",
    "passed": false,
    "received": undefined,
    "where": "changed specification",
  },
]
`;

exports[`lifecycle rules stability wip can be changed to another maturity 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-snyk-api-stability": "ga",
      },
    },
    "condition": "be provided for every resource document",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#stability-levels",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-snyk-api-stability": "ga",
        },
        "before": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-snyk-api-stability": "wip",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
    "condition": "not change unless it was wip",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#promoting-stability-of-a-resource-over-time",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability transitions",
    "passed": true,
    "received": undefined,
    "where": "changed specification",
  },
]
`;

exports[`lifecycle rules sunset fails when the file was removed and not deprecated 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-optic-ci-empty-spec": true,
        },
        "before": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
    "condition": "not change unless it was wip",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#promoting-stability-of-a-resource-over-time",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability transitions",
    "passed": true,
    "received": undefined,
    "where": "changed specification",
  },
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-optic-ci-empty-spec": true,
      },
    },
    "condition": "follow sunset rules",
    "docsLink": undefined,
    "error": "expected Example to be deprecated before removing",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "sunset rules",
    "passed": false,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;

exports[`lifecycle rules sunset schedule fails when the schedule isn't met 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-optic-ci-empty-spec": true,
        },
        "before": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
    "condition": "not change unless it was wip",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#promoting-stability-of-a-resource-over-time",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability transitions",
    "passed": true,
    "received": undefined,
    "where": "changed specification",
  },
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-optic-ci-empty-spec": true,
      },
    },
    "condition": "follow sunset rules",
    "docsLink": undefined,
    "error": "expected beta resource Example to be deprecated 90 days",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "sunset rules",
    "passed": false,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;

exports[`lifecycle rules sunset schedule passes when the schedule is met 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
          "x-optic-ci-empty-spec": true,
        },
        "before": Object {
          "info": Object {
            "title": "Empty",
            "version": "0.0.0",
          },
          "openapi": "3.1.3",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
    "condition": "not change unless it was wip",
    "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/principles/version.md#promoting-stability-of-a-resource-over-time",
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "resource stability transitions",
    "passed": true,
    "received": undefined,
    "where": "changed specification",
  },
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-optic-ci-empty-spec": true,
      },
    },
    "condition": "follow sunset rules",
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "sunset rules",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;
